--- a/index.html
+++ b/index.html
@@ -53,8 +53,13 @@
         <main>
             <div class="container-fluid">
                 <section class="col-md-6">
-                </section>
+                    Chart 1
+                    <canvas id="chart_1" width="600" height="300" class="chartjs-render-monitor" style="display: block; height: 150px; width: 300px;"></canvas>                </section>
                 <section class="col-md-6">
+                    Chart 2
+                    <div>
+                        <canvas id="chart_2" width="1204" height="602" class="chartjs-render-monitor" style="display: block; height: 301px; width: 602px;"></canvas>
+                    </div>
                 </section>
             </div>
             <div class="container-fluid">
@@ -63,10 +68,7 @@
                 <section class="col-md-4">Table 3</section>                
             </div>
         </main>
-        <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
-        <script src="https://unpkg.com/highcharts/highcharts.js"></script>
-        <script src="https://unpkg.com/vue-highcharts/dist/vue-highcharts.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"></script>
         <script src="index.js"></script>
     </body>
 </html>
