Updated titles of charts

--- a/index.html
+++ b/index.html
@@ -53,13 +53,9 @@
         <main>
             <div class="container-fluid">
                 <section class="col-md-6">
-                    Chart 1
-                    <canvas id="chart_1" width="600" height="300" class="chartjs-render-monitor" style="display: block; height: 150px; width: 300px;"></canvas>                </section>
+                    <canvas id="chart_1" class="chartjs-render-monitor" style="display: block; height: 150px; width: 300px;"></canvas>                </section>
                 <section class="col-md-6">
-                    Chart 2
-                    <div>
-                        <canvas id="chart_2" width="1204" height="602" class="chartjs-render-monitor" style="display: block; height: 301px; width: 602px;"></canvas>
-                    </div>
+                    <canvas id="chart_2" class="chartjs-render-monitor" style="display: block; height: 301px; width: 602px;"></canvas>
                 </section>
             </div>
             <div class="container-fluid">
