Table styling and data hard-coded...ew. Sorry

--- a/index.html
+++ b/index.html
@@ -59,9 +59,138 @@
                 </section>
             </div>
             <div class="container-fluid">
-                <section class="col-md-4">Table 1</section>
-                <section class="col-md-4">Table 2</section>
-                <section class="col-md-4">Table 3</section>                
+                <section class="col-md-4">
+                    <div class="data-section-title data-section-title--table">
+                        <h3>Devices Needing Attention</h3>
+                        <a href="#">View All &raquo;</a>
+                    </div>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Device</th>
+                                <th>Change</th>
+                                <th>Retrieval</th>
+                                <th>Log</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                                <tr>
+                                    <td>93KDA-1DD-1</td>
+                                    <td class="random-dot"></td>
+                                    <td class="random-dot"></td>
+                                    <td class="random-dot"></td>
+                                </tr>
+                                <tr>
+                                    <td>39CJ08-22</td>
+                                    <td class="random-dot"></td>
+                                    <td class="random-dot"></td>
+                                    <td class="random-dot"></td>
+                                </tr>
+                                <tr>
+                                    <th>D3EDC-2-112</th>
+                                    <td class="random-dot"></td>
+                                    <td class="random-dot"></td>
+                                    <td class="random-dot"></td>
+                                </tr>
+                                <tr>
+                                    <td>D30S-12W</td>
+                                    <td class="random-dot"></td>
+                                    <td class="random-dot"></td>
+                                    <td class="random-dot"></td>
+                                </tr>
+                                <tr>
+                                    <td>D3E9H-AA0</td>
+                                    <td class="random-dot"></td>
+                                    <td class="random-dot"></td>
+                                    <td class="random-dot"></td>
+                                </tr>
+                        </tbody>
+                    </table>
+                </section>
+                <section class="col-md-4">
+                    <div class="data-section-title data-section-title--table">
+                        <h3>Recently Changed Devices</h3>
+                        <a href="#">View All &raquo;</a>
+                    </div>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Device</th>
+                                    <th>Date of Change</th>
+                                    <th>Type of Change(s)</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                    <tr>
+                                        <td>93KDA-1DD-1</td>
+                                        <td>08/06/92</td>
+                                        <td>ADD</td>
+                                    </tr>
+                                    <tr>
+                                        <td>39CJ08-22</td>
+                                        <td>08/06/92</td>
+                                        <td>DELETE/MODIFY</td>
+                                    </tr>
+                                    <tr>
+                                        <th>D3EDC-2-112</th>
+                                        <td>08/06/92</td>
+                                        <td>ADD/DELETE</td>
+                                    </tr>
+                                    <tr>
+                                        <td>D30S-12W</td>
+                                        <td>08/06/92</td>
+                                        <td>MODIFY</td>
+                                    </tr>
+                                    <tr>
+                                        <td>D3E9H-AA0</td>
+                                        <td>08/06/92</td>
+                                        <td>ADD/MODIFY</td>
+                                    </tr>
+                            </tbody>
+                        </table>
+                </section>
+                <section class="col-md-4">
+                    <div class="data-section-title data-section-title--table">
+                        <h3>Devices By Rule Count</h3>
+                        <a href="#">View All &raquo;</a>
+                    </div>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Device</th>
+                                <th>Rule Count</th>
+                                <th>Removeable Rule Count</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                                <tr>
+                                    <td>93KDA-1DD-1</td>
+                                    <td>1233</td>
+                                    <td>7633</td>
+                                </tr>
+                                <tr>
+                                    <td>39CJ08-22</td>
+                                    <td>0892</td>
+                                    <td>143</td>
+                                </tr>
+                                <tr>
+                                    <th>D3EDC-2-112</th>
+                                    <td>0021</td>
+                                    <td>1117</td>
+                                </tr>
+                                <tr>
+                                    <td>D30S-12W</td>
+                                    <td>2214</td>
+                                    <td>5</td>
+                                </tr>
+                                <tr>
+                                    <td>D3E9H-AA0</td>
+                                    <td>0091</td>
+                                    <td>92</td>
+                                </tr>
+                        </tbody>
+                    </table>
+            </section>           
             </div>
         </main>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"></script>
