Responsive sub nav and nav

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <button class="nav-button nav-button--accent nav-button--combobox-before" type="button">Toolbox</button>
                 </div>
                 <div class="nav-hamburger-menu main-nav-buttons col-md-9">
-                    <div id="hamburger_button" class="fas fa-bars">
+                    <div id="hamburger_button" class="hamburger-button fas fa-bars">
                         <span class="hidden-text">Menu</span>
                     </div>
                     <div class="hamburger-menu-items">
