viewport meta data for mobile optimized

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="style.css"/>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <header>
@@ -29,6 +30,7 @@
                         <a href="#">Assessments</a>
                         <a href="#">Administration</a>
                         <a href="#">Toolbox</a>
+                        <a class="filter-link" href="#">Filter</a>
                     </div>
                 </div>
             </nav>
